<resources>
    <string name="app_name">PGR208-1_Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usd">USD</string>
    <string name="sell">Sell</string>
    <string name="all">All</string>
    <string name="buy">buy</string>
    <string name="transactions">Transactions</string>
    <string name="splash_title">Virtual Crypto App</string>
    <string name="portfolio_description">Your points are the sum of the current value of all the currencies in your portfolio converted to USD</string>
    <string name="portfolio">Portfolio</string>
    <string name="points_placeholder">Points: - $</string>
    <string name="usd_balance_placeholder">USD balance: - $</string>
    <string name="current_price_placeholder">Current price: - $</string>
    <string name="logo_contentdesc">Cryptocurrency logo</string>
    <string name="arrow_icon_contentdesc">Arrow icon pointing up or down</string>
</resources>